Removed vulnerabilities for quality gate